Fixed: Added logout button to base template, figured out how to align-right and set it to redirect to previous page after registering.
Needs: Lex editing/deleting comments.

Needs: Signaling, Tests, communicate with flask app.

--- a/lmn/static/css/base_style.css
+++ b/lmn/static/css/base_style.css
@@ -46,7 +46,7 @@ button {
   background-color: #4b80c2;
 }
 
-#welcome_user_msg, #login_or_sign_up {
+#welcome_user_msg, #login_or_sign_up, #sign_up {
   position: absolute;
   right: 0px;
   padding-right: 10px;
